final development of codeup design using bootstrap and custom css done

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -47,18 +47,16 @@
         </div>
     </nav>
     <!-- the main header section begins here -->
-    <header class="container mt-5" style="font-family: 'Anton', sans-serif; ">
-        <div class="row">
-            <div class="hero-text mb-4 d-flex text-center text-uppercase">visual design & web development</div>
-            <div class="sub-heading mb-5 text-center text-uppercase">from park city, utah</div>
+    <header class="container mt-5" style="font-family: 'Anton', sans-serif;">
+        <div class="row d-flex">
+            <div class="hero-text mb-4 text-center text-uppercase px-0">visual design & web development</div>
+            <div class="sub-heading mb-4 text-center text-uppercase px-0">from park city, utah</div>
         </div>
-        <div class="container mt-5">
-            <div class="row d-flex flex-row justify-content-center">
-                <div class=" me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #EB9D3A">DEVELOP</div>
-                <div class=" me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #E6563B;">DESIGN</div>
-                <div class=" me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #7CB06C">SUPPORT</div>
-                <div class=" me-5 mb-5 rounded-circle text-center d-flex align-items-center justify-content-center my-circle" style="background: #00ABA9">HOST</div>
-            </div>
+        <div class="row d-flex flex-row justify-content-center">
+            <div class="col-md-3 mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle design">design</div>
+            <div class="col-md-3 mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle develop">develop</div>
+            <div class="col-md-3 mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle support">support</div>
+            <div class="col-md-3 mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle host">host</div>
         </div>
     </header>
     <!-- the horizontal line in the middle of the page begins here -->
@@ -66,7 +64,7 @@
         <hr>
     </div>
     <!-- the middle sub-heading begin here -->
-    <section class="container d-flex flex-row text-center align-items-center my-4">
+    <section class="container d-flex flex-row text-center align-items-center my-5">
         <div class="d-flex flex-row justify-content-center col-8 div-center">
             <h5 class=" text-uppercase text-center text-muted" style="font-size: 1rem;">Selected Work</h5>
         </div>
@@ -86,10 +84,10 @@
                 <div class="row d-flex flex-row align-items-center py-2">
                     <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end ">
-                        <span class="featured-project me-3 rounded-circle text-center text-uppercase" style="background: #EB9D3A">d</span>
-                        <span class="featured-project me-3 rounded-circle text-center text-uppercase"  style="background: #E6563B;">d</span>
-                        <span class="featured-project me-3 rounded-circle text-center text-uppercase" style="background: #7CB06C">s</span>
-                        <span class="featured-project me-3 rounded-circle text-center text-uppercase" style="background: #00ABA9">h</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase design">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase develop">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase support">s</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase host">h</span>
                     </div>
                 </div>
             </div>
@@ -101,10 +99,10 @@
                 <div class="row d-flex flex-row  align-items-center py-2">
                     <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #7CB06C">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #00ABA9">H</span>
+                        <span class="featured-project me-3 rounded-circle text-center design">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center develop">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center support">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center host">H</span>
                     </div>
                 </div>
             </div>
@@ -116,10 +114,10 @@
                 <div class="row d-flex flex-row align-items-center py-2">
                     <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #7CB06C">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #00ABA9">H</span>
+                        <span class="featured-project me-3 rounded-circle text-center design">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center develop">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center support">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center host">H</span>
                     </div>
                 </div>
             </div>
@@ -131,10 +129,10 @@
                 <div class="row d-flex flex-row align-items-center py-2">
                     <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #EB9D3A">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center"  style="background: #E6563B;">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #7CB06C">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center" style="background: #00ABA9">H</span>
+                        <span class="featured-project me-3 rounded-circle text-center design">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center develop">D</span>
+                        <span class="featured-project me-3 rounded-circle text-center support">S</span>
+                        <span class="featured-project me-3 rounded-circle text-center host">H</span>
                     </div>
                 </div>
             </div>
@@ -145,22 +143,22 @@
                 <div>
                     <img src="img/mobile-phone.jpg" alt="a cell phone at the top of a computer keyboard">
                 </div>
-                <h4 class="ps-4" style="font-family: 'Anton', sans-serif;">the admin bar and absolute positioning</h4>
+                <h5 class="ps-4 side-bar-info text-uppercase">the admin bar and absolute positioning</h5>
             </div>
             <div class="d-flex flex-row mb-4">
                 <div>
                     <img src="img/head.jpg" alt="">
                 </div>
-                <h4 class="ps-4" style="font-family: 'Anton', sans-serif;">nibbler awesome website testing</h4>
+                <h5 class="ps-4 side-bar-info text-uppercase">nibbler awesome website testing</h5>
             </div>
             <div class="d-flex flex-row mb-4">
                 <div>
                     <img src="img/ipad.jpg" alt="">
                 </div>
-                <h4 class="ps-4" style="font-family: 'Anton', sans-serif;">how to get google to like you</h4>
+                <h5 class="ps-4 side-bar-info text-uppercase">how to get google to like you</h5>
             </div>
             <div class="mt-5">
-                <h5 class="text-uppercase text-muted" style="font-size: 0.9rem">last tweet</h5>
+                <h5 class="text-uppercase text-muted side-bar-heading">last tweet</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Eaque unde quidem a id animi deleniti temporibus quia perspiciatis?
                     Quidem numquam veritatis impedit, animi dignissimos voluptatum.
