final development of codeup design using bootstrap and custom css done

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -25,7 +25,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
+                <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
                     <li class="nav-item">
                         <a class="navbar-brand" href="#">codeup design</a>
                     </li>
@@ -53,14 +53,13 @@
             <div class="sub-heading mb-4 text-center text-uppercase px-0">from park city, utah</div>
         </div>
         <div class="row d-flex flex-row justify-content-center">
-            <div class="col-md-3 mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle design">design</div>
-            <div class="col-md-3 mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle develop">develop</div>
-            <div class="col-md-3 mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle support">support</div>
-            <div class="col-md-3 mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle host">host</div>
-        </div>
+            <div class="mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle design">design</div>
+            <div class="mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle develop">develop</div>
+            <div class="mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle support">support</div>
+            <div class="mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle host">host</div>
     </header>
     <!-- the horizontal line in the middle of the page begins here -->
-    <div class="container">
+    <div class="container horizontal-line">
         <hr>
     </div>
     <!-- the middle sub-heading begin here -->
