--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
                     <li class="nav-item">
-                        <a class="navbar-brand" href="#">codeup design</a>
+                        <a class="navbar-brand d-none d-sm-none d-lg-block" href="#">codeup design</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled text-uppercase" aria-current="page" href="#">services</a>
@@ -57,6 +57,7 @@
             <div class="mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle develop">develop</div>
             <div class="mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle support">support</div>
             <div class="mx-4 my-5 rounded-circle text-center text-uppercase d-flex align-items-center justify-content-center my-circle host">host</div>
+        </div>
     </header>
     <!-- the horizontal line in the middle of the page begins here -->
     <div class="container horizontal-line">
@@ -71,9 +72,9 @@
             <h5 class="text-uppercase text-muted" style="font-size: 1rem;">the last</h5>
         </div>
     </section>
-
+    <!---- main section of the design starts here ---->
     <main class="container d-flex flex-row">
-        <!--parent container -->
+        <!--parent container of the cards -->
         <section class="row">
             <!-- first card begin here --->
             <div class="col-md-6">
@@ -98,10 +99,10 @@
                 <div class="row d-flex flex-row  align-items-center py-2">
                     <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
-                        <span class="featured-project me-3 rounded-circle text-center design">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center develop">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center support">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center host">H</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase design">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase develop">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase support">s</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase host">h</span>
                     </div>
                 </div>
             </div>
@@ -113,10 +114,10 @@
                 <div class="row d-flex flex-row align-items-center py-2">
                     <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
-                        <span class="featured-project me-3 rounded-circle text-center design">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center develop">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center support">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center host">H</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase design">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase develop">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase support">s</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase host">h</span>
                     </div>
                 </div>
             </div>
@@ -128,10 +129,10 @@
                 <div class="row d-flex flex-row align-items-center py-2">
                     <div class="col-6 caption text-uppercase">featured project</div>
                     <div class="col-6 d-flex flex-row justify-content-end">
-                        <span class="featured-project me-3 rounded-circle text-center design">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center develop">D</span>
-                        <span class="featured-project me-3 rounded-circle text-center support">S</span>
-                        <span class="featured-project me-3 rounded-circle text-center host">H</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase design">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase develop">d</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase support">s</span>
+                        <span class="featured-project me-3 rounded-circle text-center text-uppercase host">h</span>
                     </div>
                 </div>
             </div>
